# nmlinux-tui

./: .gitignore  README.md  pyproject.toml
nmlinux_tui/: app.py
nmlinux_tui/screens/: dashboard.py  interfaces.py  ip_scanner.py  ping.py  wifi.py
nmlinux_tui/workers/: ip_scan.py  net_info.py  ping_worker.py  wifi_scan.py
tests/: test_workers.py
